# yatws

./: .aider.conf.yml  .gitignore  BUILD  Cargo.toml  MODULE.bazel  README.md  gemini.py  requirements.txt  requirements_lock.txt
yatws/: BUILD  Cargo.toml  README.md  gen_goldens.rs  test_account.rs  test_data_obs.rs  test_data_ref.rs  test_data_sub.rs  test_fin.rs  test_general.rs  test_market.rs  test_news.rs  test_option.rs  test_order.rs  test_order_builder.rs  test_session_manager.rs  tws_snoop.rs
yatws/doc/: aider-workflow.org  api.md  design.md  market_obs.md  market_sub.md  order_sub.md  rate_limiter.md  test_results.md  todo.md
yatws/ref/: BUILD  box_spread_query.py  box_spread_yield.py  broker_cleanup_orders.py  broker_order_market.py  historical_data.py  historical_schedule.py  market_scanner.py  option_price_calc.py  parse_message.py  place_order.py  realtime_data.py  single_quote.py  smart_components.py  stop_limit_order.py  vwap_order.py
yatws/src/: account.rs  account_manager.rs  account_subscription.rs  base.rs  client.rs  conn.rs  conn_log.rs  conn_mock.rs  contract.rs  data.rs  data_fin_manager.rs  data_manager.rs  data_market_manager.rs  data_news_manager.rs  data_observer.rs  data_ref_manager.rs  data_subscription.rs  data_wsh.rs  financial_advisor.rs  financial_advisor_manager.rs  financial_report_parser.rs  handler.rs  lib.rs  message_parser.rs  min_server_ver.rs  news.rs  news_subscription.rs  options_strategy_builder.rs  order.rs  order_builder.rs  order_manager.rs  parser_account.rs  parser_client.rs  parser_data_fin.rs  parser_data_market.rs  parser_data_news.rs  parser_data_ref.rs  parser_fin_adv.rs  parser_order.rs  protocol.rs  (+5 more)
