[workspace]
members = [
    "yatws",
]

# Workspace-wide resolver settings
resolver = "2"

[workspace.dependencies]
# Define shared dependencies for the workspace.
# Individual crates can then inherit them using `serde_json = { workspace = true }`
# or specify their own version if needed.
anyhow = "1.0"
bytes = "1.5"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
crossbeam-channel = "0.5"
env_logger = "0.10"
flate2 = "1.0"
futures = "0.3" # For async operations, if any in the future
hex = "0.4"
inventory = "0.3"
log = "0.4"
once_cell = "1.18"
parking_lot = "0.12"
rand = "0.8"
regex = "1.10"
rusqlite = { version = "0.31.0", features = ["bundled", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" # Added serde_json
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] } # If using tokio for async runtime
tokio-util = { version = "0.7", features = ["codec"] }
url = "2.5"
# Add other common dependencies here
