module(
    name = "yatws",
    version = "0.0.0",
    compatibility_level = 1,
)

########## PYTHON
bazel_dep(name = "rules_python", version="1.0.0")
# This only configures the python used during build. Use `py_runtime` for the executable.
python = use_extension("@rules_python//python/extensions:python.bzl", "python")

# This must be set to the system python version, because rules_rust uses the system python.
kPythonVersion = "3.12"
python.toolchain(python_version = kPythonVersion, is_default = True)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
# Merge it with requirements.txt into requirements_lock.txt
# bazel run requirements.update
pip.parse(
    hub_name = "pip_deps",
    python_version = kPythonVersion,
    requirements_lock = "//:requirements_lock.txt",
)
use_repo(pip, "pip_deps")

########## RUST
bazel_dep(name = "rules_rust", version = "0.59.2")
rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
# Pick one that works from here: https://releases.rs/
# rust.toolchain(edition = "2021", versions = ["1.86.0"])
rust.toolchain(edition = "2021", versions = ["1.8.0"])
# rust.toolchain(edition = "2021")
use_repo(rust, "rust_toolchains")
register_toolchains("@rust_toolchains//:all")
# To update, run `bazel run @rules_rust//tools/rust_analyzer:gen_rust_project`.
rust_analyzer = use_extension("@rules_rust//tools/rust_analyzer:deps.bzl", "rust")
rust_analyzer.rust_analyzer_dependencies()

# Required by crates_io_api.
crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")

crate.spec(package = "anyhow", version = "1.0.97")
crate.spec(package = "async-channel", version = "2.3.1")
crate.spec(package = "chrono", version = "0.4.39", features = ["std", "serde"])
crate.spec(package = "chrono-tz", version = "0.10.1")
crate.spec(package = "ctrlc", version = "3.4.5")
crate.spec(package = "cute", version = "0.3.0")
crate.spec(package = "glob", version = "0.3.2")
crate.spec(package = "pyo3", version = "0.23.5", features = ["extension-module"])
crate.spec(package = "serde", version  = "1.0.218", features = ["derive"])
crate.spec(package = "serde_json", version = "1.0.140", features = ["raw_value"])
crate.spec(package = "rusqlite", version = "0.34.0", features = ["vtab", "functions", "window", "blob", "bundled", "rusqlite-macros"])
crate.spec(package = "env_logger", version = "0.11.6")
crate.spec(package = "time", version = "0.3.39", features = ["macros", "parsing", "serde", "serde-human-readable"])
crate.spec(package = "tokio", version = "1.43.0", features = ["full"])
crate.from_specs()
use_repo(crate, "crates")
