[package]
name = "yatws"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Yet Another TWS (Interactive Brokers TWS API) Implementation"
license = "MIT OR Apache-2.0"
repository = "https://github.com/drpngx/yatws"
readme = "../README.md"
keywords = ["finance", "trading", "interactive-brokers", "tws"]
categories = ["api-bindings", "finance"]

[dependencies]
thiserror = "2.0.12"
anyhow = "1.0.98"
bitmask-enum = "2.2.5"
chrono = { version = "0.4.39", features = ["std", "serde"] }
chrono-tz = "0.10.1"
glob = "0.3.2"
pyo3 = { version = "0.23.5", features = ["extension-module"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["raw_value"] }
rusqlite = { version = "0.34.0", features = ["vtab", "functions", "window", "blob", "bundled", "rusqlite-macros"] }
futures = "0.3.31"
parking_lot = "0.12.3"
async-trait = "0.1.88"
lazy_static = "1.5.0"
uuid = { version = "1.16.0", features = ["v4"] }
bincode = "1.3"
env_logger = "0.11.6"
log = "0.4.26"
once_cell = "1.21.3"
inventory = "0.3.20"
num-traits = "0.2.19"
time = { version = "0.3.39", features = ["macros", "parsing", "serde", "serde-human-readable"] }
tokio = { version = "1.43.0", features = ["full"] }
byteorder = "1.5.0"
rust_decimal = "1.37.1"
clap = { version = "4.5.31", features = ["derive"] }

[dev-dependencies]
tokio-test = "0.4.4"
mockall = "0.13.1"
serial_test = "3.2.0"
tempfile = "3.19.1"

[lib]
name = "yatws"

[[bin]]
name = "tws_snoop"
path = "tws_snoop.rs"

[[bin]]
name = "gen_goldens"
path = "gen_goldens.rs"

# Local Variables:
# eval: (add-hook 'after-save-hook (lambda () (shell-command "bazel sync --only=crates")) nil t)
# End:
