[package]
name = "yatws"
version = "0.1.1"
edition = "2021"
authors = ["Patrick Nguyen <pub+yatws@drpng.com>"]
description = "Yet Another TWS (Interactive Brokers TWS API) Implementation"
license = "MIT"
repository = "https://github.com/drpngx/yatws"
readme = "README.md"
keywords = ["finance", "trading", "interactive-brokers", "tws"]
categories = ["api-bindings", "finance"]

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
bincode = "1.3"
bitmask-enum = "2.2.5"
byteorder = "1.5.0"
chrono = { version = "0.4.39", features = ["std", "serde"] }
chrono-tz = "0.10.1"
clap = { version = "4.5.31", features = ["derive"] }
crossbeam = "0.8.4"
crossbeam-channel = "0.5.15"
env_logger = "0.11.6"
futures = "0.3.31"
glob = "0.3.2"
inventory = "0.3.20"
lazy_static = "1.5.0"
log = "0.4.26"
num_enum = "0.7.3"
num-traits = "0.2.19"
once_cell = "1.21.3"
parking_lot = "0.12.3"
rand = "0.9.1"
rusqlite = { version = "0.34.0", features = ["vtab", "functions", "window", "blob", "bundled", "rusqlite-macros"] }
rust_decimal = "1.37.1"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["raw_value"] }
socket2 = "0.5.10"
thiserror = "2.0.12"
time = { version = "0.3.39", features = ["macros", "parsing", "serde", "serde-human-readable"] }
tokio = { version = "1.43.0", features = ["full"] }
uuid = { version = "1.16.0", features = ["v4"] }
quick-xml = { version = "0.31", features = ["serialize"] }


[dev-dependencies]
tokio-test = "0.4.4"
mockall = "0.13.1"
serial_test = "3.2.0"
tempfile = "3.19.1"

[lib]
name = "yatws"

[[bin]]
name = "tws_snoop"
path = "tws_snoop.rs"

[[bin]]
name = "gen_goldens"
path = "gen_goldens.rs"
